# py-investment

./: .coveragerc  .gitignore  Dockerfile-test  LICENSE  Makefile  README.md  create-user.sh  docker-compose-test.yml  docker-compose.yml  py-investment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scrapy.cfg  setup.py
PyTech/: Portfolio.py  Stock.py  analysis.py
crawler/: exporters.py  item_pipeline.py  items.py  loaders.py  settings.py  throttle.py  utils.py
crawler/spiders/: edgar.py  nasdaq.py
pytech/: Makefile  __init__.py  analysis.py  asset.py  base.py  blotter.py  db_utils.py  enums.py  errors.py  evnironment.py  exceptions.py  order.py  portfolio.py  pytech.sqlite  slippage.py  stock.py  utils.py
pytech/algo/: algo.py  evnironment.py  params.py  strategy.py
pytech/arctic/: __init__.py  chunkstore.py
pytech/backtest/: backtest.py  event.py
pytech/crawler/: item_pipeline.py  items.py  loaders.py
pytech/data/: __init__.py  _holders.py  bar.py  connection.py  handler.py  reader.py  schema.py
pytech/db/: connector.py  db.py  db_utils.py  enviornment.py  finders.py  pytech_db_schema.py
pytech/decorators/: __init__.py  decorators.py
pytech/fin/: analysis.py  asset.py  balancer.py  (+4 more)
test/: conftest.py  test_backtest.py  test_blotter.py  test_handler.py  test_loaders.py  test_order.py  test_portfolio.py  test_pytech.py  test_spiders_edgar.py  test_utils.py
tests/: conftest.py  test_backtest.py  test_blotter.py  test_event.py  test_handler.py  test_loaders.py  test_order.py  test_portfolio.py  test_pytech.py  test_utils.py
(+118 files in other folders)
